<resources>
    <string name="app_name">Leaderboard</string>
    <string name="learning_leaders_tab">Learning Leaders</string>
    <string name="skill_iq_leaders_tab">Skill IQ Leaders</string>
    <string name="launcher_icon">Launcher icon</string>
    <string name="leader_badge">Leader badge</string>
    <string name="name_of_leader">Name of Leader</string>
    <string name="leader_information">Leader\'s information</string>
    <string name="learning_leader_info">%1$d learning hours, %2$s.</string>
    <string name="skill_iq_info">%1$d skill IQ score, %2$s.</string>
    <string name="title_activity_submission">Project Submission</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="btn_submit">Submit</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email_address">Email Address</string>
    <string name="github_link">GitHub Project Link</string>
    <string name="submission_successful">Submission Successful</string>
    <string name="submission_not_successful">Submission Not Successful</string>
</resources>
