<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="8dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginTop="@dimen/smaller_margin"
        android:layout_marginBottom="@dimen/smaller_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:orientation="horizontal"
        android:weightSum="100">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="25"
            android:contentDescription="@string/leader_badge"
            android:padding="8dp"
            android:src="@drawable/learning_hours_badge" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="75"
            android:orientation="vertical">

            <TextView
                android:id="@+id/leader_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/name_of_leader"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/leader_name_size" />

            <TextView
                android:id="@+id/leader_information"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/leader_information"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/leader_information_size" />

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>