<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:background="@android:color/black"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="96dp"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".SubmissionActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/firstNameField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_corners_2"
        app:layout_constraintBottom_toTopOf="@+id/lastNameField"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteX="16dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/firstName"
            android:hint="@string/first_name"
            android:inputType="textPersonName"
            android:background="@null"
            android:paddingBottom="16dp"
            android:paddingStart="8dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:paddingEnd="8dp"
            android:selectAllOnFocus="true"
            android:layout_height="wrap_content"
            android:layout_width="match_parent" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/lastNameField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:background="@drawable/rounded_corners_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/firstNameField"
        tools:layout_editor_absoluteX="16dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/lastName"
            android:hint="@string/last_name"
            android:inputType="textPersonName"
            android:background="@null"
            android:paddingBottom="16dp"
            android:paddingStart="8dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:paddingEnd="8dp"
            android:selectAllOnFocus="true"
            android:layout_height="wrap_content"
            android:layout_width="match_parent" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailAddressField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:background="@drawable/rounded_corners_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lastNameField"
        tools:layout_editor_absoluteX="16dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailAddress"
            android:hint="@string/email_address"
            android:inputType="textEmailAddress"
            android:background="@null"
            android:paddingBottom="16dp"
            android:paddingStart="8dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:paddingEnd="8dp"
            android:selectAllOnFocus="true"
            android:layout_height="wrap_content"
            android:layout_width="match_parent" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/githubLinkField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:background="@drawable/rounded_corners_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailAddressField"
        tools:layout_editor_absoluteX="16dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/githubLink"
            android:hint="@string/github_link"
            android:inputType="textUri"
            android:background="@null"
            android:paddingBottom="16dp"
            android:paddingStart="8dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:paddingEnd="8dp"
            android:selectAllOnFocus="true"
            android:layout_height="wrap_content"
            android:layout_width="match_parent" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:background="@drawable/orange_rounded"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:paddingLeft="48dp"
        android:paddingRight="48dp"
        android:layout_marginBottom="96dp"
        android:text="@string/btn_submit"
        android:textStyle="bold"
        android:textSize="@dimen/material_text_subhead"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:paddingEnd="48dp"
        android:paddingStart="48dp" />

</androidx.constraintlayout.widget.ConstraintLayout>